src/sass/_reset.scss
@use "./color" as colr;

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 62.5% // 10px;
}

html,
body,
#root {
    height: 100%;
    font-family: "Raleway", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    color: colr.$black-var-1;
}

ol li,
ul li {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit; 
}

a, button{
    cursor: pointer;
}

input, a, button{
    font-family: inherit;
}

img{
    display: block;
    max-width: 100%;
}

